tests/org.eclipse.php.core.tests/workspace/errors/unfinishedClassDecl6.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
class A extends {}
?>
--EXPECT--
[line=2, start=22, end=23] syntax error, unexpected '{', expecting 'identifier'